# Customer-Churn-Prediction-System

./: .gitignore  LICENSE  Makefile  README.md  churn-ml-engineer-architecture.drawio  environment.yml  notebooks1.ipynb  pyproject.toml  requirements.txt
src/: __init__.py
src/data/: data_handler.py  data_ingestor.py
src/models/: model_trainer.py
src/pipeline/: __init__.py
src/utils/: exception_handler.py  logging_handler.py
