[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-prediction-system"
version = "0.1.0"
description = "Customer churn prediction pipeline with training and inference modules."
requires-python = ">=3.10"
dependencies = [
	"pandas>=2.2.0",
	"numpy>=1.26.0",
	"scikit-learn>=1.5.0",
	"joblib>=1.4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = [
	"missing-module-docstring",
	"missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 88
